--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -13,7 +13,7 @@
               srcset="./img/catalog/imagetab1@1x.png 1x, ./img/catalog/imagetab1@2x.png 2x" />
 
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob1@1x.png 1x, ./img/catalog/imagemob1@2x.png 2x" />
 
             <img
@@ -49,7 +49,7 @@
               media="(min-width:768px)"
               srcset="./img/catalog/imagetab2@1x.png 1x, ./img/catalog/imagetab2@2x.png 2x" />
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob2@1x.png 1x, ./img/catalog/imagemob2@2x.png 2x" />
 
             <img
@@ -85,7 +85,7 @@
               media="(min-width:768px)"
               srcset="./img/catalog/imagetab3@1x.png 1x, ./img/catalog/imagetab3@2x.png 2x" />
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob3@1x.png 1x, ./img/catalog/imagemob3@2x.png 2x" />
 
             <img
@@ -119,7 +119,7 @@
               media="(min-width:768px)"
               srcset="./img/catalog/imagetab4@1x.png 1x, ./img/catalog/imagetab4@2x.png 2x" />
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob4@1x.png 1x, ./img/catalog/imagemob4@2x.png 2x" />
 
             <img
@@ -153,7 +153,7 @@
               media="(min-width:768px)"
               srcset="./img/catalog/imagetab5@1x.png 1x, ./img/catalog/imagetab5@2x.png 2x" />
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob5@1x.png 1x, ./img/catalog/imagemob5@2x.png 2x" />
 
             <img
@@ -188,7 +188,7 @@
               media="(min-width:768px)"
               srcset="./img/catalog/imagetab6@1x.png 1x, ./img/catalog/imagetab6@2x.png 2x" />
             <source
-              media="(min-width:320px)"
+              media="(max-widht:787px)"
               srcset="./img/catalog/imagemob6@1x.png 1x, ./img/catalog/imagemob6@2x.png 2x" />
 
             <img
