--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -7,19 +7,19 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="...img/catalog/imagedesk1@1x.png 1x, ...img/catalog/imagedesk1@2x.png 2x" />
+              srcset="./img/catalog/imagedesk1@1x.png 1x, ./img/catalog/imagedesk1@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="...img/catalog/imagetab1@1x.png 1x, ...img/catalog/imagetab1@2x.png 2x" />
+              srcset="./img/catalog/imagetab1@1x.png 1x, ./img/catalog/imagetab1@2x.png 2x" />
 
             <source
               media="(max-widht:787px)"
-              srcset="...img/catalog/imagemob1@1x.png 1x, ...img/catalog/imagemob1@2x.png 2x" />
+              srcset="./img/catalog/imagemob1@1x.png 1x, ./img/catalog/imagemob1@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="...img/catalog/imagemob1@1x.png"
+              src="./img/catalog/imagemob1@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
@@ -44,18 +44,18 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="..img/catalog/imagedesk2@1x.png 1x, ..img/catalog/imagedesk2@2x.png 2x" />
+              srcset="./img/catalog/imagedesk2@1x.png 1x, ./img/catalog/imagedesk2@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="..img/catalog/imagetab2@1x.png 1x, ..img/catalog/imagetab2@2x.png 2x" />
+              srcset="./img/catalog/imagetab2@1x.png 1x, ./img/catalog/imagetab2@2x.png 2x" />
             <source
               media="(max-widht:787px)"
-              srcset="..img/catalog/imagemob2@1x.png 1x, ..img/catalog/imagemob2@2x.png 2x" />
+              srcset="./img/catalog/imagemob2@1x.png 1x, ./img/catalog/imagemob2@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="..img/catalog/imagemob2@1x.png"
+              src="./img/catalog/imagemob2@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
@@ -80,18 +80,18 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="..img/catalog/imagedesk3@1x.png 1x, ..img/catalog/imagedesk3@2x.png 2x" />
+              srcset="./img/catalog/imagedesk3@1x.png 1x, ./img/catalog/imagedesk3@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="..img/catalog/imagetab3@1x.png 1x, ..img/catalog/imagetab3@2x.png 2x" />
+              srcset="./img/catalog/imagetab3@1x.png 1x, ./img/catalog/imagetab3@2x.png 2x" />
             <source
               media="(max-widht:787px)"
-              srcset="..img/catalog/imagemob3@1x.png 1x, ..img/catalog/imagemob3@2x.png 2x" />
+              srcset="./img/catalog/imagemob3@1x.png 1x, ./img/catalog/imagemob3@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="..img/catalog/imagemob3@1x.png"
+              src="./img/catalog/imagemob3@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
@@ -114,18 +114,18 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="..img/catalog/imagedesk4@1x.png 1x, ..img/catalog/imagedesk4@2x.png 2x" />
+              srcset="./img/catalog/imagedesk4@1x.png 1x, ./img/catalog/imagedesk4@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="..img/catalog/imagetab4@1x.png 1x, ..img/catalog/imagetab4@2x.png 2x" />
+              srcset="./img/catalog/imagetab4@1x.png 1x, ./img/catalog/imagetab4@2x.png 2x" />
             <source
               media="(max-widht:787px)"
-              srcset="..img/catalog/imagemob4@1x.png 1x, ..img/catalog/imagemob4@2x.png 2x" />
+              srcset="./img/catalog/imagemob4@1x.png 1x, ./img/catalog/imagemob4@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="..img/catalog/imagemob4@1x.png"
+              src="./img/catalog/imagemob4@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
@@ -148,18 +148,18 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="..img/catalog/imagedesk5@1x.png 1x, ..img/catalog/imagedesk5@2x.png 2x" />
+              srcset="./img/catalog/imagedesk5@1x.png 1x, ./img/catalog/imagedesk5@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="..img/catalog/imagetab5@1x.png 1x, ..img/catalog/imagetab5@2x.png 2x" />
+              srcset="./img/catalog/imagetab5@1x.png 1x, ./img/catalog/imagetab5@2x.png 2x" />
             <source
               media="(max-widht:787px)"
-              srcset="..img/catalog/imagemob5@1x.png 1x, ..img/catalog/imagemob5@2x.png 2x" />
+              srcset="./img/catalog/imagemob5@1x.png 1x, ./img/catalog/imagemob5@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="..img/catalog/imagemob5@1x.png"
+              src="./img/catalog/imagemob5@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
@@ -183,18 +183,18 @@
           <picture
             ><source
               media="(min-width:1280px)"
-              srcset="..img/catalog/imagedesk6@1x.png 1x, ..img/catalog/imagedesk6@2x.png 2x" />
+              srcset="./img/catalog/imagedesk6@1x.png 1x, ./img/catalog/imagedesk6@2x.png 2x" />
             <source
               media="(min-width:768px)"
-              srcset="..img/catalog/imagetab6@1x.png 1x, ..img/catalog/imagetab6@2x.png 2x" />
+              srcset="./img/catalog/imagetab6@1x.png 1x, ./img/catalog/imagetab6@2x.png 2x" />
             <source
               media="(max-widht:787px)"
-              srcset="..img/catalog/imagemob6@1x.png 1x, ..img/catalog/imagemob6@2x.png 2x" />
+              srcset="./img/catalog/imagemob6@1x.png 1x, ./img/catalog/imagemob6@2x.png 2x" />
 
             <img
               loading="lazy"
               class="catalog-img"
-              src="..img/catalog/imagemob6@1x.png"
+              src="./img/catalog/imagemob6@1x.png"
               alt="Watch"
           /></picture>
           <div class="catalog-content">
